--- a/style.css
+++ b/style.css
@@ -35,13 +35,13 @@ body {
 }
 
 .body {
-    
     display: flex;
-    flex: 1;
 }
 
 .footer {
     background-color: #1F2937;
+    color: #e5e7eb;
     display: flex;
-    flex: 1;
+    justify-content: center;
+    align-items: center;
 }
