--- a/style.css
+++ b/style.css
@@ -1,10 +1,6 @@
-* {
-    background-color: #1F2937;
-}
-
 body {
     margin: 0;
-    min-height: 100vh;
+    background-color: #1F2937;
     display: flex;
     flex-direction: column;
     padding: 20px 120px 20px;
@@ -36,6 +32,27 @@ body {
 
 .body {
     display: flex;
+    flex-direction: column;
+}
+
+.first-body {
+    background-color: #1F2937;
+    display: flex;
+}
+
+.second-body {
+    display: flex;
+    background-color: #FFF;
+}
+
+.third-body {
+    background-color: #e5e7eb;
+    display: flex;
+}
+
+.fourth-body {
+    background-color: #FFF;
+    display: flex;
 }
 
 .footer {
@@ -44,4 +61,5 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-shrink: 0;
 }
