--- a/style.css
+++ b/style.css
@@ -33,25 +33,53 @@ body {
 .body {
     display: flex;
     flex-direction: column;
+    padding: 0;
 }
 
 .first-body {
     background-color: #1F2937;
     display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 60px;
+    margin: 40px;
+}
+
+.hero-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    text-align: center;
+}
+
+.main-text {
+    font-size: 48px;
+    font-weight: 800;
+    color: #F9FAF8;
+}
+
+.main-second-text {
+    font-size: 18px;
+    color: #e5e7eb;
 }
 
 .second-body {
-    display: flex;
     background-color: #FFF;
+    margin: 40px;
+    display: flex;
 }
 
 .third-body {
     background-color: #e5e7eb;
+    margin: 40px;
     display: flex;
 }
 
 .fourth-body {
     background-color: #FFF;
+    margin: 40px;
     display: flex;
 }
 
