--- a/style.css
+++ b/style.css
@@ -40,9 +40,8 @@ body {
     background-color: #1F2937;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    gap: 60px;
     margin: 40px;
 }
 
@@ -51,7 +50,17 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    text-align: center;
+    flex-basis: 700px;
+}
+
+.hero-text button {
+    margin-top: 20px;
+    padding: 6px 30px;
+    border-radius: 15px;
+    background-color: #3882f6;
+    color: #e5e7eb;
+    font-weight: 700;
+    font-size: 24px;
 }
 
 .main-text {
