--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ body {
     justify-content: center;
     align-items: center;
     padding: 20px;
+    margin-bottom: 40px;
 }
 
 .info-container {
